--- a/microservices/HotelService/src/main/resources/application.yml
+++ b/microservices/HotelService/src/main/resources/application.yml
@@ -15,13 +15,7 @@ spring:
   application:
     name: HOTEL-SERVICE
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  config:
+    import: configserver:http://localhost:8085
 
 
