--- a/microservices/RatingService/src/main/resources/application.yml
+++ b/microservices/RatingService/src/main/resources/application.yml
@@ -8,12 +8,6 @@ spring:
   application:
     name: RATING-SERVICE
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  config:
+    import: configserver:http://localhost:8085
 
